--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -48,10 +48,11 @@
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <Button
-        android:id="@+id/searchSpinnerButton"
+        android:id="@+id/searchSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:enabled="true"
         android:text="SEARCH"
         app:layout_constraintBottom_toBottomOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,11 +61,12 @@
         app:layout_constraintTop_toTopOf="@+id/spinner" />
 
     <Button
-        android:id="@+id/completeSearchButton"
+        android:id="@+id/searchAutoComplete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="30dp"
+        android:enabled="false"
         android:text="SEARCH"
         app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextIngredient"
         app:layout_constraintEnd_toEndOf="parent"
