--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -35,7 +35,7 @@
         android:id="@+id/alcoholicCocktailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:textColor="#8C1818"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -46,29 +46,32 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="64dp"
         android:text="Served in:"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintBottom_toBottomOf="@+id/alcoholicCocktailText"
+        app:layout_constraintStart_toEndOf="@+id/alcoholicCocktailText"
+        app:layout_constraintTop_toTopOf="@+id/alcoholicCocktailText" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="64dp"
         android:text="Category:"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintBottom_toBottomOf="@+id/glassCocktailText"
+        app:layout_constraintStart_toEndOf="@+id/glassCocktailText"
+        app:layout_constraintTop_toTopOf="@+id/glassCocktailText" />
 
     <TextView
         android:id="@+id/glassCocktailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:textColor="#8C1818"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@+id/alcoholicCocktailText"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toTopOf="@+id/textView6"
         tools:text="Type of class" />
 
@@ -76,9 +79,10 @@
         android:id="@+id/categoryCocktailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:textColor="#8C1818"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/glassCocktailText"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toTopOf="@+id/textView7"
         tools:text="Category" />
 
@@ -86,18 +90,20 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="200dp"
         android:text="Preparation:"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreCocktailText" />
+        app:layout_constraintTop_toBottomOf="@+id/glassCocktailText" />
 
     <TextView
         android:id="@+id/instructionsCocktailText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="256dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#8C1818"
@@ -113,15 +119,17 @@
         android:layout_marginTop="16dp"
         android:text="Ingredients:"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView12"
+        app:layout_constraintStart_toStartOf="@+id/textView12"
         app:layout_constraintTop_toBottomOf="@+id/instructionsCocktailText" />
 
     <TextView
         android:id="@+id/ingredientsCocktailText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="256dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#8C1818"
@@ -134,42 +142,41 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="Score:"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/ingredientsCocktailText"
+        app:layout_constraintTop_toBottomOf="@+id/ingredientsCocktailText" />
 
     <TextView
         android:id="@+id/scoreCocktailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="0 out of 10"
         android:textColor="#8C1818"
         app:layout_constraintBottom_toBottomOf="@+id/textView17"
-        app:layout_constraintStart_toStartOf="@+id/categoryCocktailText"
+        app:layout_constraintStart_toEndOf="@+id/textView17"
         app:layout_constraintTop_toTopOf="@+id/textView17" />
-
-    <Button
-        android:id="@+id/scoreCocktailButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#8C1818"
-        android:text="SCORE IT!"
-        app:layout_constraintBottom_toBottomOf="@+id/scoreCocktailText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/scoreCocktailText" />
 
     <Button
         android:id="@+id/addCocktailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#8C1818"
         android:enabled="false"
         android:text="ADD"
-        app:layout_constraintBottom_toTopOf="@+id/scoreCocktailButton"
-        app:layout_constraintEnd_toEndOf="@+id/scoreCocktailButton"
-        app:layout_constraintStart_toStartOf="@+id/scoreCocktailButton" />
+        app:layout_constraintStart_toStartOf="@+id/textView17"
+        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+
+    <Button
+        android:id="@+id/scoreCocktailButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#8C1818"
+        android:text="SCORE IT!"
+        app:layout_constraintEnd_toEndOf="@+id/ingredientsCocktailText"
+        app:layout_constraintTop_toBottomOf="@+id/ingredientsCocktailText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
