Sixteenth commit (several changes to make Cocktail+CocktailIngredient work)

--- a/app/src/main/res/layout/dialog_score.xml
+++ b/app/src/main/res/layout/dialog_score.xml
@@ -7,12 +7,32 @@
 
     <RatingBar
         android:id="@+id/scoreBar"
+        style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:contentDescription="rating bar"
+        android:isIndicator="false"
+        android:numStars="10"
+        android:paddingBottom="20dp"
+        android:progressTint="#E1AF08"
         android:rating="1"
         android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="16dp"
+        android:text="Grade this cocktail"
+        android:textColor="#393636"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
