Seventeenth commit (started to use the database)

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -75,6 +75,7 @@
         app:layout_constraintTop_toTopOf="@+id/autoCompleteTextIngredient" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
