--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -167,9 +167,19 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:backgroundTint="#8C1818"
-        android:enabled="false"
+        android:enabled="true"
         android:text="ADD"
         app:layout_constraintBottom_toTopOf="@+id/scoreCocktailButton"
         app:layout_constraintEnd_toEndOf="@+id/scoreCocktailButton"
         app:layout_constraintStart_toStartOf="@+id/scoreCocktailButton" />
+
+    <ImageView
+        android:id="@+id/cocktailPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ingredientsCocktailText"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
