--- a/app/src/main/res/layout/cocktail_line.xml
+++ b/app/src/main/res/layout/cocktail_line.xml
@@ -121,6 +121,8 @@
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:paddingEnd="20dp"
+                    android:paddingBottom="2dp"
                     android:textColor="#8C1818"
                     android:textSize="12sp"
                     android:textStyle="bold"
