--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -167,7 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:backgroundTint="#8C1818"
-        android:enabled="true"
+        android:enabled="false"
         android:text="ADD"
         app:layout_constraintBottom_toTopOf="@+id/scoreCocktailButton"
         app:layout_constraintEnd_toEndOf="@+id/scoreCocktailButton"
