--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -101,14 +101,14 @@
         android:id="@+id/instructionsCocktailText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="256dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="64dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#8C1818"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cocktailPhoto"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
         tools:text="The instructions for the preparation of the cocktail" />
 
@@ -127,14 +127,13 @@
         android:id="@+id/ingredientsCocktailText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="256dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="64dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#8C1818"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/instructionsCocktailText"
         app:layout_constraintTop_toBottomOf="@+id/textView15"
         tools:text="The ingredients the cocktail is made of" />
 
@@ -179,4 +178,13 @@
         android:text="SCORE IT!"
         app:layout_constraintEnd_toEndOf="@+id/ingredientsCocktailText"
         app:layout_constraintTop_toBottomOf="@+id/ingredientsCocktailText" />
+
+    <ImageView
+        android:id="@+id/cocktailPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
